CELDEV-1224 - implement flexible js-version for tinymce6 (#39)
* update version to 6.8.3-CEL5-SNAPSHOT

* add primary annotation

* correct mocking

* correct defaultRteConfig in RteConfigScriptService

* resolve conflict

* update dependencies

* implement flexible js-version for tinymce6

* Update RichText-component/src/main/java/com/celements/rteConfig/RTEConfig.java

Co-authored-by: Marc Sladek <marc@sladek.dev>

* Update RichText-component/src/main/java/com/celements/tinymce4/TinyMce4Config.java

Co-authored-by: Marc Sladek <marc@sladek.dev>

---------

Co-authored-by: Marc Sladek <marc@sladek.dev>